--- a/src/Rossy.App/MainPage.xaml
+++ b/src/Rossy.App/MainPage.xaml
@@ -2,6 +2,7 @@
     x:Class="Rossy.App.MainPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:controls="using:Microsoft.Toolkit.Uwp.UI.Controls"
     xmlns:local="using:Rossy.App"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -19,9 +20,16 @@
                 <TextBox Name="txtUtterance" HorizontalAlignment="Left" Text="TextBox" TextWrapping="Wrap" VerticalAlignment="Top" Width="500" />
             </StackPanel>
             <Button Name="btnAnalyze" Content="Analyze" VerticalAlignment="Top" Click="btnAnalyze_Click"/>
-            <ScrollViewer VerticalScrollMode="Auto"  VerticalScrollBarVisibility="Auto">
-                <TextBlock Name="txtAnalysisResult" HorizontalAlignment="Left" TextWrapping="WrapWholeWords" Width="800" Height="800" />
-            </ScrollViewer>
+            <controls:TabView HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+                <controls:TabViewItem Header="Log">
+                    <ScrollViewer VerticalScrollMode="Auto"  VerticalScrollBarVisibility="Auto">
+                        <TextBlock Name="txtAnalysisResult" HorizontalAlignment="Left" TextWrapping="WrapWholeWords" Width="800" Height="800" />
+                    </ScrollViewer>
+                </controls:TabViewItem>
+                <controls:TabViewItem Header="Photo">
+                    <Image x:Name="imgPhoto" Width="300" Height="300" />
+                </controls:TabViewItem>
+            </controls:TabView>
         </StackPanel>
     </Grid>
 </Page>
